--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,6 +20,6 @@ jobs:
         codedeploy_group: example-codedeploy-deployment-group
         codedeploy_register_only: true
         s3_bucket: codepipeline-ap-southeast-1-794253563693
-        s3_folder: /
+        s3_folder: def
         max_polling_iterations: 60
-        directory: ./
+        directory: abc
