--- a/.github/workflows/laravel.yaml
+++ b/.github/workflows/laravel.yaml
@@ -10,17 +10,19 @@ jobs:
     runs-on: ubuntu-20.04
     environment: production
     steps:
-    - name: AWS CodeDeploy
-      uses: sourcetoad/aws-codedeploy-action@v1
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+    
+    - name: configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
-        aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-        aws_region: ap-southeast-1
-        codedeploy_name: example-codedeploy-app
-        codedeploy_group: example-codedeploy-deployment-group
-        codedeploy_register_only: true
-        s3_bucket: codepipeline-ap-southeast-1-794253563693
-        s3_folder: /
-        max_polling_iterations: 60
-        directory: ./
-      run: pwd
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-1
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v1
+      run : |
+      aws deploy push --application-name example-codedeploy-app --description "This is app" --s3-location s3://codepipeline-ap-southeast-1-794253563693/laravel.zip --source lrv-githubaction
+      aws deploy create-deployment --application-name example-codedeploy-app --s3-location bucket=codepipeline-ap-southeast-1-794253563693,key=laravel.zip,bundleType=zip,eTag=4cfc57c679e58e43058f2ed30844ba3f-9 --deployment-group-name example-codedeploy-deployment-group --deployment-config-name CodeDeployDefault.OneAtATime
