--- a/.github/workflows/laravel.yaml
+++ b/.github/workflows/laravel.yaml
@@ -18,8 +18,8 @@ jobs:
     - name: configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS }}
           aws-region: ap-southeast-1
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
