--- a/.github/workflows/laravel.yaml
+++ b/.github/workflows/laravel.yaml
@@ -24,5 +24,5 @@ jobs:
     - name : AWS CodeDeploy
       run : |
         aws deploy push --application-name example-codedeploy-app --description "This is app" --s3-location s3://codepipeline-ap-southeast-1-794253563693/laravel.zip --source .
-        aws deploy create-deployment --application-name example-codedeploy-app --s3-location bucket=codepipeline-ap-southeast-1-794253563693,key=laravel.zip,bundleType=zip,eTag=33403f018c9cdd8ae40b665737e0816c-4  --deployment-group-name example-codedeploy-deployment-group --deployment-config-name CodeDeployDefault.OneAtATime
+        aws deploy create-deployment --application-name example-codedeploy-app --s3-location bucket=codepipeline-ap-southeast-1-794253563693,key=laravel.zip,bundleType=zip  --deployment-group-name example-codedeploy-deployment-group --deployment-config-name CodeDeployDefault.OneAtATime
 
